# AutomateTheBoringStuff

./: 1. Structured Extraction.ipynb  2. Summarization.ipynb  3. Agents.ipynb  4. ChatBot.ipynb  README.md  pyproject.toml
data/: compliance_audits.json
