[project]
name = "BoringStuff"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "watermark",
    "jupyter",
    "tqdm>=4.67.3",
    "pydantic>=2.13.3",
    "langchain-anthropic>=1.4.2",
    "datasets>=4.8.5",
    "langchain-text-splitters>=1.1.2",
    "crewai>=1.6.1",
    "langgraph>=0.4.0",
    "sentence-transformers>=5.4.1",
]
